[project]
name = "airconvertsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "air[standard]>=0.45.0",
    "ruff>=0.12.8",
    "pygments>=2.19.2",
    "fastapi-cli>=0.0.20",
    "fastapi-cloud-cli>=0.6.0",
]


[tool.fastapi]
entrypoint = "main:app"
